fix scrollbar issue

--- a/src/game/app/client/views/css/style.css
+++ b/src/game/app/client/views/css/style.css
@@ -13,6 +13,10 @@ body {
   user-select: none;
 }
 
+body.modal-open {
+  overflow: scroll !important;
+}
+
 input,
 textarea {
      -moz-user-select: text;
